# ovk

./: .gitignore  CMakeLists.txt  compile_commands.json  configure-rel.bat  configure.bat  deferred-dbg.rdbg  run_example.bat  run_mightycity.bat
examples/: CMakeLists.txt
examples/deferred/: deferred.cpp  imgui.ini  renderer.cpp  renderer.h
examples/deferred/res/shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
examples/triangle/: triangle.cpp
examples/triangle/res/shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
mightycity/: CMakeLists.txt  game.cpp  game.h  imgui.ini  main.cpp
mightycity/graphics/: mesh.cpp  mesh.h  renderer.cpp  renderer.h
mightycity/res/materials/: Lowpoly_tree_sample.mtl  better_house.mtl
mightycity/res/models/: better_house.mtl
mightycity/res/shader/: frag.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  shadow.frag  shadow.vert  shadow.vert.spv  terrain.frag  terrain.frag.spv  terrain.vert  terrain.vert.spv  terrain_picker.frag  terrain_picker.frag.spv  terrain_picker.vert  terrain_picker.vert.spv
mightycity/utils/: noise.cpp  noise.h
mightycity/world/: chunk.cpp  chunk.h  world.cpp  world.h
ovk/: CMakeLists.txt  TODO.h  def.h  dllmain.cpp  handle.h  ovk.cpp  ovk.h  pch.h
ovk/app/: application.cpp  application.h  camera.cpp  camera.h  event.cpp  event.h  state.cpp  state.h
ovk/base/: buffer.cpp  buffer.h  debug.h  descriptor.cpp  descriptor.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  instance.cpp  instance.h  mem.cpp  mem.h  pipeline.cpp  pipeline.h  render_command.cpp  render_command.h  render_pass.cpp  render_pass.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  sync.cpp  sync.h
ovk/gui/: compile_shaders.bat  gui_renderer.cpp  gui_renderer.h  imgui.frag  imgui.frag.u32  imgui.vert  imgui.vert.u32
ovk/renderer/: base.h
ovk/ui/: concept.cpp  manager.cpp  manager.h  renderer.cpp  renderer.h  text.cpp  text.h  widget.h
ovk/ui/shader/: text.frag  text.frag.spv  text.vert  text.vert.spv  ui.vert  ui.vert.spv  ui_colored.frag  ui_colored.frag.spv  ui_textured.frag  ui_textured.frag.spv
ovk/util/: model_loader.cpp  model_loader.h  render_graph.cpp
ovk/util/loader/: obj_loader.cpp  obj_loader.h
sandbox/: CMakeLists.txt  main.cpp
